# AutoEffectPlugin

./: .gitignore  .gitmodules  AutoEffects.jucer  CHANGELOG.md  CMakeLists.txt  README.md  configureLinux.sh  rebuildForTest.sh  xcodeGenerate.sh
.github/actions/deploy/: action.yml
.github/workflows/: action.yml  buildingMacOs.yml  c-cpp.yml  release.yml  test.yml  testing.yml
Include/: CustomJuceHeader.h
Ressources/: classifier.pt
Source/: EffectProcessors.cpp  EffectProcessors.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  dropFileZone.h
Source/OverrideJuce/: StandaloneApp.cpp  StandaloneApp.h
Source/UI/: EffectBlocks.cpp  EffectBlocks.h  GenericGrid.cpp  GenericGrid.h  IconButton.h  LoadingWaitingScreen.h  ResponsiveLabel.h
Source/UIElements/: SelectFileButton.cpp  SelectFileButton.h
